force-app/main/default/objects/Opportunity/fields/Achieved_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Outcomes__c</fullName>
    <label>Achieved Outcomes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Referral Created</fullName>
            </value>
            <value>
                <fullName>Reference Lead Created</fullName>
            </value>
            <value>
                <fullName>Additional Services Sold</fullName>
            </value>
            <value>
                <fullName>Positive Review Generated</fullName>
            </value>
            <value>
                <fullName>Customer Satisfaction Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>