force-app/main/default/objects/Opportunity/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Real Estate Administration</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>Reengagement</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>Subscription Renewal</fullName>
            </value>
            <value>
                <fullName>Event Booking</fullName>
            </value>
            <value>
                <fullName>Document Review Upsell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>