force-app/main/default/objects/Opportunity/fields/Closed_Lost_Prospects__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Prospects__c</fullName>
    <label>Closed Lost Prospects</label>
    <summaryFilterItems>
        <field>Prospect__c.Prospect_Status__c</field>
        <operation>equals</operation>
        <value>Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Prospect__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>