force-app/main/default/objects/Opportunity/fields/Event_Count__c.field-meta.xml
<CustomField>
    <fullName>Event_Count__c</fullName>
    <label>Event Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>