force-app/main/default/objects/Opportunity/fields/Event_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Event_Tracker__c</fullName>
    <description>Used when booking lectures</description>
    <displayFormat>E-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Event Tracker</label>
    <type>AutoNumber</type>
</CustomField>