force-app/main/default/objects/Opportunity/fields/Has_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Has_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Appointment</label>
    <type>Checkbox</type>
</CustomField>