force-app/main/default/objects/Opportunity/fields/Invalid_Reason__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Reason__c</fullName>
    <label>Invalid Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Deceased</fullName>
            </value>
            <value>
                <fullName>Cognitive Decline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>