force-app/main/default/objects/Opportunity/fields/Invoicing_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Agreement__c</fullName>
    <label>Invoicing Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Invoicing_Agreement</valueSetName>
    </valueSet>
</CustomField>