force-app/main/default/objects/Opportunity/fields/Is_Cancel_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Is_Cancel_Campaigns__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cancel Campaigns</label>
    <type>Checkbox</type>
</CustomField>