force-app/main/default/objects/Opportunity/fields/Lecture_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lecture_Notes__c</fullName>
    <label>Lecture Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>