force-app/main/default/objects/Opportunity/fields/Market_Unit__c.field-meta.xml
<CustomField>
    <fullName>Market_Unit__c</fullName>
    <label>Market Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Market_Unit</valueSetName>
    </valueSet>
</CustomField>