force-app/main/default/objects/Opportunity/fields/Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Marketing_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>