force-app/main/default/objects/Opportunity/fields/Not_Interested_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Interested_Reason__c</fullName>
    <label>Not Interested Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rejected during the introduction</fullName>
            </value>
            <value>
                <fullName>The customer hung up</fullName>
            </value>
            <value>
                <fullName>Will get back on their own</fullName>
            </value>
            <value>
                <fullName>Too expensive</fullName>
            </value>
            <value>
                <fullName>Cannot afford it</fullName>
            </value>
            <value>
                <fullName>Follow-up in 3-6 months</fullName>
            </value>
            <value>
                <fullName>No longer responds</fullName>
            </value>
            <value>
                <fullName>Does not want furthercontact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>