force-app/main/default/objects/Opportunity/fields/Number_of_Prospects__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Prospects__c</fullName>
    <label>Number of Prospects</label>
    <summaryForeignKey>Prospect__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>