force-app/main/default/objects/Opportunity/fields/Open_Payout_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Payout_Count__c</fullName>
    <label>Open Payout Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>