force-app/main/default/objects/Opportunity/fields/Open_Prospects__c.field-meta.xml
<CustomField>
    <fullName>Open_Prospects__c</fullName>
    <label>Open Prospects</label>
    <summaryFilterItems>
        <field>Prospect__c.Prospect_Status__c</field>
        <operation>equals</operation>
        <value>Not Contacted, No Answer, Working</value>
    </summaryFilterItems>
    <summaryForeignKey>Prospect__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>