force-app/main/default/objects/Opportunity/fields/Opportunity_Total__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Total__c</fullName>
    <formula>Total_Cost__c - Total_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>