force-app/main/default/objects/Opportunity/fields/Percentage_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Discount_Amount__c</fullName>
    <description>Sum of the percentage discount amounts on Opportunity Products</description>
    <inlineHelpText>Sum of the percentage discount amounts on Opportunity Products</inlineHelpText>
    <label>Percentage Discount Amount</label>
    <summarizedField>OpportunityLineItem.Discount_Given__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>