force-app/main/default/objects/Opportunity/fields/Potential_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Potential_Outcomes__c</fullName>
    <label>Potential Outcomes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Referral</fullName>
            </value>
            <value>
                <fullName>Reference Lead</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Positive Review</fullName>
            </value>
            <value>
                <fullName>Customer Satisfaction Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>