force-app/main/default/objects/Opportunity/fields/Prospects_Converted_to_Leads__c.field-meta.xml
<CustomField>
    <fullName>Prospects_Converted_to_Leads__c</fullName>
    <label>Prospects Converted to Leads</label>
    <summaryFilterItems>
        <field>Prospect__c.Prospect_Status__c</field>
        <operation>equals</operation>
        <value>Converted To Lead</value>
    </summaryFilterItems>
    <summaryForeignKey>Prospect__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>