force-app/main/default/objects/Opportunity/fields/Prospects_Not_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Prospects_Not_Contacted__c</fullName>
    <label>Prospects Not Contacted</label>
    <summaryFilterItems>
        <field>Prospect__c.Prospect_Status__c</field>
        <operation>equals</operation>
        <value>Not Contacted</value>
    </summaryFilterItems>
    <summaryForeignKey>Prospect__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>