force-app/main/default/objects/Opportunity/fields/Refunded_Charges__c.field-meta.xml
<CustomField>
    <fullName>Refunded_Charges__c</fullName>
    <label>Refunded Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>