force-app/main/default/objects/Opportunity/fields/Retained_Charges__c.field-meta.xml
<CustomField>
    <fullName>Retained_Charges__c</fullName>
    <label>Retained Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>