force-app/main/default/objects/Opportunity/fields/Send_SMS_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Send_SMS_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send SMS Reminder</label>
    <type>Checkbox</type>
</CustomField>