force-app/main/default/objects/Opportunity/fields/Stop_Calling__c.field-meta.xml
<CustomField>
    <fullName>Stop_Calling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Calling</label>
    <type>Checkbox</type>
</CustomField>