force-app/main/default/objects/Opportunity/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Referral</fullName>
            </value>
            <value>
                <fullName>Reference Lead</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Positive Review</fullName>
            </value>
            <value>
                <fullName>Satisfaction Survey</fullName>
            </value>
            <value>
                <fullName>Lecture Booking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>