force-app/main/default/objects/Opportunity/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <description>Roll-up up all Order Product Amounts greater than 0</description>
    <inlineHelpText>Roll-up up all Order Product Amounts greater than 0</inlineHelpText>
    <label>Total Cost</label>
    <summarizedField>OpportunityLineItem.Total_Product_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Total_Product_Cost__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>