force-app/main/default/objects/Opportunity/fields/UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign__c</fullName>
    <label>UTM Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UTM_Campaign</valueSetName>
    </valueSet>
</CustomField>