force-app/main/default/objects/Opportunity/fields/UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium__c</fullName>
    <label>UTM Medium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UTM_Medium</valueSetName>
    </valueSet>
</CustomField>