force-app/main/default/objects/Opportunity/fields/UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source__c</fullName>
    <label>UTM Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UTM_Source</valueSetName>
    </valueSet>
</CustomField>