force-app/main/default/objects/Opportunity/recordTypes/Association_Lecture.recordType-meta.xml
<RecordType>
    <fullName>Association_Lecture</fullName>
    <active>true</active>
    <businessProcess>Association Lecture</businessProcess>
    <label>Association Lecture</label>
</RecordType>