force-app/main/default/objects/Opportunity/recordTypes/Customer_Care.recordType-meta.xml
<RecordType>
    <fullName>Customer_Care</fullName>
    <active>true</active>
    <businessProcess>Customer Care</businessProcess>
    <description>Used for reaching out to customers after their process is completed</description>
    <label>Customer Care</label>
</RecordType>