force-app/main/default/objects/Opportunity/recordTypes/Event_Booking.recordType-meta.xml
<RecordType>
    <fullName>Event_Booking</fullName>
    <active>true</active>
    <businessProcess>Lecture Booking Sales Process</businessProcess>
    <label>Event Booking</label>
</RecordType>