force-app/main/default/objects/Opportunity/recordTypes/Internal_Real_Estate_Administration.recordType-meta.xml
<RecordType>
    <fullName>Internal_Real_Estate_Administration</fullName>
    <active>true</active>
    <businessProcess>Internal Real Estate Administration</businessProcess>
    <label>Internal Real Estate Administration</label>
</RecordType>