force-app/main/default/objects/Opportunity/recordTypes/Private_Inheritance_Law.recordType-meta.xml
<RecordType>
    <fullName>Private_Inheritance_Law</fullName>
    <active>true</active>
    <businessProcess>Private Inheritance Law</businessProcess>
    <label>Private Inheritance Law</label>
</RecordType>